--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -38,17 +38,11 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
+        
         <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
+          <%for(var i=0; i<list.length; i++){%>
+            <li><a href="#"><%=list[i]%></a></li>
+          <%}%>
         </li>
       </ul>
       <ul class="nav navbar-right navbar-nav">
