Add dynamic navigation menu

--- a/src/views/index-copy.ejs
+++ b/src/views/index-copy.ejs
@@ -48,16 +48,26 @@
             </div>
 
             <ul class="nav">
-                <% for(var cnt=0; cnt < nav.length; cnt++){%>
                 <li>
-                    <a href="<%=nav[cnt].Link%>">
+                    <a href="dashboard.html">
                         <i class="ti-panel"></i>
-                        <p><%=nav[cnt].Title%></p>
+                        <p>Dashboard</p>
                     </a>
                 </li>
-                <%}%>
+                <li class="active">
+                    <a href="table.html">
+                        <i class="ti-view-list-alt"></i>
+                        <p>Books</p>
+                    </a>
+                </li> 
+                <li>
+                    <a href="user.html">
+                        <i class="ti-user"></i>
+                        <p>Authors</p>
+                    </a>
+                </li>
                       
-			</ul>
+				    </ul>
     	</div>
     </div>
 
@@ -141,8 +151,34 @@
                                         	<td>Curaçao</td>
                                         	<td>Sinaai-Waas</td>
                                         </tr>
-
-                                        
+                                        <tr>
+                                        	<td>3</td>
+                                        	<td>Sage Rodriguez</td>
+                                        	<td>$56,142</td>
+                                        	<td>Netherlands</td>
+                                        	<td>Baileux</td>
+                                        </tr>
+                                        <tr>
+                                        	<td>4</td>
+                                        	<td>Philip Chaney</td>
+                                        	<td>$38,735</td>
+                                        	<td>Korea, South</td>
+                                        	<td>Overland Park</td>
+                                        </tr>
+                                        <tr>
+                                        	<td>5</td>
+                                        	<td>Doris Greene</td>
+                                        	<td>$63,542</td>
+                                        	<td>Malawi</td>
+                                        	<td>Feldkirchen in Kärnten</td>
+                                        </tr>
+                                        <tr>
+                                        	<td>6</td>
+                                        	<td>Mason Porter</td>
+                                        	<td>$78,615</td>
+                                        	<td>Chile</td>
+                                        	<td>Gloucester</td>
+                                        </tr>
                                     </tbody>
                                 </table>
 
