--- a/src/views/book-view.ejs
+++ b/src/views/book-view.ejs
@@ -13,21 +13,18 @@
 
 
     <!-- Bootstrap core CSS     -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Animation library for notifications   -->
-    <link href="css/animate.min.css" rel="stylesheet"/>
+    <link href="/css/animate.min.css" rel="stylesheet"/>
 
     <!--  Paper Dashboard core CSS    -->
-    <link href="css/paper-dashboard.css" rel="stylesheet"/>
-
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="css/demo.css" rel="stylesheet" />
+    <link href="/css/paper-dashboard.css" rel="stylesheet"/>
 
     <!--  Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="css/themify-icons.css" rel="stylesheet">
+    <link href="/css/themify-icons.css" rel="stylesheet">
 
 </head>
 <body>
@@ -64,7 +61,6 @@
                 <%}%>        
 			</ul>
     	</div>
-
     </div>
 
     <div class="main-panel">
@@ -77,7 +73,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Book List</a>
+                    <a class="navbar-brand" href="#">Book Details</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -118,42 +114,87 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-lg-4 col-md-5">
+                        <div class="card card-user">
+                            <div class="image">
+                                <img src="/img/background.jpg" alt="..."/>
+                            </div>
+                            <div class="content">
+                                <div class="author">
+                                  <img class="avatar border-white" src="/img/faces/face-2.jpg" alt="..."/>
+                                  <h4 class="title"><%=book.title%><br /></h4>
+                                </div>
+                                <p class="description text-center">
+                                    <%=book.author%>
+                                </p>
+                            </div>
+                            <hr>
+                            <div class="text-center">
+                                <div class="row">
+                                    <div class="col-md-3 col-md-offset-1">
+                                        <h5><%=book.read%><br /><small>Read</small></h5>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <h5><%=book.genre%><br /><small>Genre</small></h5>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <h5>24,6$<br /><small>Price</small></h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    <div class="col-lg-8 col-md-7">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">All Books</h4>
+                                <h4 class="title">Edit Book</h4>
                             </div>
-                            <div class="content table-responsive table-full-width">
-                                <table class="table table-striped">
-                                    <thead>
-                                        <th>ID</th>
-                                        <th>Title</th>
-                                    	<th>Genre</th>
-                                    	<th>Author</th>
-                                    	<th>Read</th>
-                                    </thead>
-                                    <tbody>
-                                        <%for(var cnt=0; cnt < books.length; cnt++){%>
-                                            <tr>
-                                                <td><%=books[cnt].id%></td>
-                                                <td><%=books[cnt].title%></td>
-                                                <td><%=books[cnt].genre%></td>
-                                                <td><%=books[cnt].author%></td>
-                                                <td><%=books[cnt].read%></td>
-                                                <td><a href="/Books/<%=books[cnt].id%>">Details</a></td>
-                                            </tr>
-                                        <%}%>
-                                        
-                                    </tbody>
-                                </table>
+                            <div class="content">
+                                <form>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label>Title</label>
+                                                <input type="text" class="form-control border-input" disabled placeholder="Book" value="Creative Code Inc.">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail1">Author</label>
+                                                <input type="email" class="form-control border-input" placeholder="Email">
+                                            </div>
+                                        </div>
+                                    </div>
 
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label>Genre</label>
+                                                <input type="text" class="form-control border-input" placeholder="Company" value="Chet">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label>Read</label>
+                                                <input type="text" class="form-control border-input" placeholder="Last Name" value="Faker">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="text-center">
+                                        <button type="submit" class="btn btn-info btn-fill btn-wd">Update Book</button>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </form>
                             </div>
                         </div>
                     </div>
 
+
                 </div>
             </div>
         </div>
+
 
         <footer class="footer">
             <div class="container-fluid">
@@ -171,23 +212,22 @@
 </body>
 
     <!--   Core JS Files   -->
-    <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/js//jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="/js//bootstrap.min.js" type="text/javascript"></script>
 
 	<!--  Checkbox, Radio & Switch Plugins -->
-	<script src="js/bootstrap-checkbox-radio.js"></script>
+	<script src="/js//bootstrap-checkbox-radio.js"></script>
 
 	<!--  Charts Plugin -->
-	<script src="js/chartist.min.js"></script>
+	<script src="/js//chartist.min.js"></script>
 
     <!--  Notifications Plugin    -->
-    <script src="js/bootstrap-notify.js"></script>
+    <script src="/js//bootstrap-notify.js"></script>
 
     <!--  Google Maps Plugin    -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
     <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-	<script src="js/paper-dashboard.js"></script>
-
+	<script src="/js//paper-dashboard.js"></script>
 
 </html>
