Create admin route and cleanup project

--- a/src/views/book-view.ejs
+++ b/src/views/book-view.ejs
@@ -132,7 +132,7 @@
                             <div class="text-center">
                                 <div class="row">
                                     <div class="col-md-3 col-md-offset-1">
-                                        <h5><%=book.bookRead%><br /><small>Read</small></h5>
+                                        <h5><%=book.read%><br /><small>Read</small></h5>
                                     </div>
                                     <div class="col-md-4">
                                         <h5><%=book.genre%><br /><small>Genre</small></h5>
