--- a/src/views/book-list.ejs
+++ b/src/views/book-list.ejs
@@ -139,7 +139,7 @@
                                                 <td><%=books[cnt].title%></td>
                                                 <td><%=books[cnt].genre%></td>
                                                 <td><%=books[cnt].author%></td>
-                                                <td><%=books[cnt].bookRead%></td>
+                                                <td><%=books[cnt].read%></td>
                                                 <td><a href="/Books/<%=books[cnt].id%>">Details</a></td>
                                             </tr>
                                         <%}%>
