Retrieving list of books from mongodb completed

--- a/src/views/book-list.ejs
+++ b/src/views/book-list.ejs
@@ -140,7 +140,7 @@
                                                 <td><%=books[cnt].genre%></td>
                                                 <td><%=books[cnt].author%></td>
                                                 <td><%=books[cnt].read%></td>
-                                                <td><a href="/Books/<%=books[cnt].id%>">Details</a></td>
+                                                <td><a href="/Books/<%=books[cnt]._id%>">Details</a></td>
                                             </tr>
                                         <%}%>
                                         
