--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -41,7 +41,6 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    
                     <div class="col-lg-8 col-md-7">
                         <div class="card">
                             <div class="header">
@@ -63,9 +62,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-
-
                                     <div class="text-center">
                                         <button type="submit" class="btn btn-info btn-fill btn-wd">Sign Up</button>
                                     </div>
@@ -74,8 +70,38 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
-
+                <div class="row">
+                    <div class="col-lg-8 col-md-7">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Sign In</h4>
+                            </div>
+                            <div class="content">
+                                <form name="signInForm" action="/auth/signIn" method="post">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label>Username</label>
+                                                <input type="text" name="username" class="form-control border-input" >
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label>Password</label>
+                                                <input type="text" name="password" class="form-control border-input" >
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="text-center">
+                                        <button type="submit" class="btn btn-info btn-fill btn-wd">Sign In</button>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
